PCHR-2223: Remove css related to the leave and sick widgets

--- a/contactsummary/css/contactsummary.css
+++ b/contactsummary/css/contactsummary.css
@@ -1,1 +1,1 @@
-#contactsummary{padding:20px}#contactsummary .panel--key-dates>.panel-body{padding-bottom:0;padding-top:0}#contactsummary .panel--key-details{margin-bottom:0 !important}#contactsummary .panel--leave .list-unstyled{margin-bottom:0}@media (min-width: 1200px){#contactsummary .panel--sickness .col--sickness-days{text-align:right}}
+#contactsummary{padding:20px}#contactsummary .panel--key-dates>.panel-body{padding-bottom:0;padding-top:0}#contactsummary .panel--key-details{margin-bottom:0 !important}
