PCHR-2514: Fix show logic in main template

--- a/com.civicrm.hrjobroles/views/include/add_new_role.html
+++ b/com.civicrm.hrjobroles/views/include/add_new_role.html
@@ -201,7 +201,7 @@
                       prevent-animations
                       theme="civihr-ui-select"
                       ng-model="funder.funder_id">
-                      <ui-select-match prevent-animations allow-clear placeholder="Select a funder" class="ui-select-match">>
+                      <ui-select-match prevent-animations allow-clear placeholder="Select a funder" class="ui-select-match">
                         {{$select.selected.sort_name}}
                       </ui-select-match>
                       <ui-select-choices
